--- a/front-end/source/assets/style/themes/_theme-dark.scss
+++ b/front-end/source/assets/style/themes/_theme-dark.scss
@@ -121,5 +121,8 @@ $text-color: #ffffff;
   --null-value-color: #004ed0;
   --hexa-value-color: #5ba95b;
   --invalid-value-color: #ff0000;
+
+  // Scrollbar
+  --scrollbar: #2e2e38;
 }
 // }
