--- a/front-end/source/assets/style/themes/_theme-light.scss
+++ b/front-end/source/assets/style/themes/_theme-light.scss
@@ -109,5 +109,8 @@ $text-color: #050038;
   --null-value-color: #004ed0;
   --hexa-value-color: #5ba95b;
   --invalid-value-color: #ff0000;
+
+  // Scrollbar
+  --scrollbar: #d3d3d3;
 }
 // }
